Removed dedicated 'currently_enrolled' property from Education
