# swagger.yaml
@@ -509,19 +509,15 @@ components:
           type: string
         end_date:
           type: string
-        currently_enrolled:
-          type: boolean
       example:
         institution: Hogwarts School of Witchcraft and Wizardry
         degree: Care of Magical Creatures
         start_date: '1986-05-20 00:00:00'
         end_date: '1986-07-06 00:00:00'
-        currently_enrolled: false
       required:
         - institution
         - degree
         - start_date
-        - currently_enrolled
 
     Experience:
       type: object
